--- a/SmartShopMobileApp/Resources/Languages/AppResources.ro.resx
+++ b/SmartShopMobileApp/Resources/Languages/AppResources.ro.resx
@@ -129,6 +129,12 @@
   <data name="CartValue" xml:space="preserve">
     <value>Valoare coș:</value>
   </data>
+  <data name="ChoosePreferredCurrency" xml:space="preserve">
+    <value>Alege valuta preferată:</value>
+  </data>
+  <data name="ChoosePreferredLanguage" xml:space="preserve">
+    <value>Alege limba preferată:</value>
+  </data>
   <data name="ChooseYourSupermarket" xml:space="preserve">
     <value>Alege supermarket-ul:</value>
   </data>
