--- a/SmartShopMobileApp/Resources/Languages/AppResources.resx
+++ b/SmartShopMobileApp/Resources/Languages/AppResources.resx
@@ -153,6 +153,9 @@
   <data name="ExpirationYear" xml:space="preserve">
     <value>Expiration year:</value>
   </data>
+  <data name="Hello" xml:space="preserve">
+    <value>Hello, </value>
+  </data>
   <data name="MaximumPrice" xml:space="preserve">
     <value>Maximum price:</value>
   </data>
