--- a/SmartShopMobileApp/Resources/Languages/AppResources.ro.resx
+++ b/SmartShopMobileApp/Resources/Languages/AppResources.ro.resx
@@ -223,7 +223,7 @@
     <value>Coșul tău de cumpărături curent:</value>
   </data>
   <data name="YourLatestShoppingCart" xml:space="preserve">
-    <value>Ultimul tău coș de cumpărături:</value>
+    <value>Ultimele tale coșuri de cumpărături:</value>
   </data>
   <data name="YourShoppingCartIsEmpty" xml:space="preserve">
     <value>Coșul tău de cumpărături este gol!</value>
